# portfolio

./: pyproject.toml
categories/: models.py
categories/migrations/: 0001_initial.py
config/: schema.py  settings.py  urls.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
works/: admin.py  models.py  queries.py  schema.py  serializers.py  types.py  urls.py  views.py
works/migrations/: 0001_initial.py  0002_remove_work_theme_work_kind_alter_work_category.py  0003_remove_work_kind.py
