[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["hooooooooooooon <douglaskim91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.1"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.209.2"}
strawberry-graphql-django = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
